--- a/main.css
+++ b/main.css
@@ -28,6 +28,10 @@ header {
 	padding-top: 40px;
 }
 
+.swiper-logos .swiper-slide img {
+	object-fit: contain;
+}
+
 .logo img {
 	width: 135px;
 	height: 65px;
@@ -730,14 +734,34 @@ nav ul li a {
 	margin-top: 50px;
 }
 
+.reviews-wrapper .swiper-slide {
+	position: relative;
+}
+
 .reviews-wrapper .swiper-slide img {
 	width: 100%;
-	height: 490px;
+	height: 100%;
+
+	object-fit: cover;
+}
+
+.reviews-wrapper .swiper-slide .launch {
+	position: absolute;
+
+	top: 50%;
+	left: 50%;
+
+	translate: -50% -50%;
+
+	background: none;
+	border: none;
+
+	cursor: pointer;
 }
 
 .reviews-wrapper .next-buttons {
 	height: auto;
-	margin-top: 50px;
+	padding-top: 50px;
 }
 
 .reviews-content {
@@ -753,6 +777,8 @@ footer {
 	padding: 40px;
 	margin: 0 auto;
 	margin-top: 67px;
+
+	flex-direction: column;
 }
 
 .footer-wrapper {
@@ -822,6 +848,206 @@ footer {
 	margin-top: 20px;
 }
 
+.conclusion {
+	width: 100%;
+
+	margin-top: 50px;
+
+	display: flex;
+	justify-content: space-between;
+}
+
+.sidebar {
+	position: fixed;
+	width: 20%;
+	height: 100dvh;
+
+	top: 0;
+	right: 0;
+	background: #0c1621;
+	transition: 0.5s;
+
+	z-index: 9999;
+
+	transform: translateX(300%);
+}
+
+.sidebar.active {
+	transform: translateX(0%);
+}
+
+.sidebar-wrapper {
+	width: 100%;
+	height: 100%;
+
+	padding: 0 20px;
+
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+
+	gap: 20px;
+}
+
+.sidebar-wrapper .close {
+	position: absolute;
+
+	top: 20px;
+	right: 20px;
+
+	cursor: pointer;
+
+	background: none;
+	border: none;
+}
+
+.sidebar-list {
+	display: flex;
+	flex-direction: column;
+	list-style: none;
+
+	gap: 20px;
+}
+
+.sidebar-list li a {
+	color: #fff;
+	font-family: "Proxima Nova";
+	font-size: 18px;
+	font-style: normal;
+	font-weight: 400;
+	line-height: normal;
+
+	cursor: pointer;
+
+	text-decoration: none;
+}
+
+.sidebar-list .social-media {
+	display: flex;
+	gap: 20px;
+}
+
+.close {
+	all: unset;
+	position: relative;
+
+	background: none;
+	border: none;
+
+	height: 50px;
+	width: 50px;
+
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
+	cursor: pointer;
+}
+
+.close .line {
+	position: absolute;
+
+	left: 0;
+
+	width: 20px;
+	height: 2px;
+	background: #fff;
+
+	transition: 0.5s;
+}
+
+.close .line.top {
+	top: 50%;
+	left: 0;
+	transform: rotate(45deg);
+}
+
+.close .line.middle {
+	opacity: 0;
+}
+
+.close .line.bottom {
+	top: 50%;
+	left: 0;
+	transform: rotate(-45deg);
+}
+
+.close.active .line.top {
+	top: 40%;
+	transform: none;
+}
+
+.close.active .line.middle {
+	top: 50%;
+	opacity: 1;
+	transform: none;
+}
+
+.close.active .line.bottom {
+	top: 60%;
+	transform: none;
+}
+
+.open {
+	all: unset;
+	position: relative;
+
+	background: none;
+	border: none;
+
+	height: 50px;
+	width: 50px;
+
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
+	cursor: pointer;
+
+	display: none;
+}
+
+.open .line {
+	position: absolute;
+
+	left: 0;
+
+	width: 20px;
+	height: 2px;
+	background: #fff;
+
+	transition: 0.5s;
+}
+
+.open .line.top {
+	top: 40%;
+}
+
+.open .line.middle {
+	top: 50%;
+}
+
+.open .line.bottom {
+	top: 60%;
+}
+
+.open.active .line.top {
+	top: 50%;
+	left: 0;
+	transform: rotate(45deg);
+}
+
+.open.active .line.middle {
+	opacity: 0;
+}
+
+.open.active .line.bottom {
+	top: 50%;
+	left: 0;
+	transform: rotate(-45deg);
+}
+
 @media screen and (max-width: 1200px) {
 	header .nav-menu ul {
 		gap: 15px;
@@ -869,13 +1095,17 @@ footer {
 	}
 
 	.reviews-wrapper .next-buttons {
-		margin-top: 20px;
+		padding-top: 15px;
 	}
 }
 
 @media screen and (max-width: 976px) {
 	header .nav-menu ul {
 		display: none;
+	}
+
+	.open {
+		display: flex;
 	}
 
 	.text-image {
@@ -955,6 +1185,10 @@ footer {
 		gap: 25px;
 	}
 
+	.sidebar {
+		width: 50%;
+	}
+
 	#executive-search,
 	#it-search,
 	#massive-search {
@@ -986,6 +1220,7 @@ footer {
 		width: 100%;
 		height: auto;
 	}
+	
 }
 
 @media screen and (max-width: 576px) {
@@ -1023,6 +1258,121 @@ footer {
 	.values-text h2 {
 		font-size: 45px;
 	}
+
+	.conclusion {
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		gap: 30px;
+	}
+
+	.swiper-team .swiper-slide img {
+		width: 100%;
+	}
+
+	.partners-wrapper {
+		flex-direction: column;
+		overflow: hidden;
+		height: auto;
+		width: 100%;
+	}
+
+	.partners-logos {
+		width: 100%;
+		overflow: unset;
+		margin-top: 20px;
+	}
+
+	.light-text {
+		width: 100%;
+	}
+
+	.contact-container {
+		width: 100%;
+	}
+
+	.video-container {
+		width: 100%;
+	}
+
+	.values-text h2 {
+		font-size: 32px;
+		height: auto;
+		width: 100%;
+		text-align: center;
+	}
+
+	.our-service-text {
+		height: auto;
+	}
+
+	.our-service-text p {
+		margin-top: 20px;
+	}
+
+	#hr-consalting {
+		height: auto;
+	}
+
+	.reviews-text p {
+		margin-top: 20px;
+	}
+
+	.contacts-wrapper {
+		width: 100%;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+	}
+
+	.conclusion .madeBy {
+		text-align: center;
+	}
+
+	.info-wrapper h3 {
+		text-align: center;
+	}
+
+	.info-wrapper p {
+		text-align: center;
+	}
+
+	.logo-wrapper {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+	}
+
+	.info-wrapper {
+		display: flex;
+		flex-direction: column;
+		gap: 15px;
+	}
+
+	.logo-wrapper p {
+		width: 100%;
+		text-align: center;
+	}
+
+	.footer-wrapper {
+		width: 100%;
+	}
+
+	.wrappers-two {
+		gap: 50px;
+	}
+
+	.open {
+		width: 25px;
+	}
+
+	header {
+		padding: 40px 0;
+	}
+
+	.sidebar {
+		width: 100%;
+	}
 }
 
 @media screen and (max-width: 320px) {
@@ -1044,5 +1394,9 @@ footer {
 
 	.employees h1 b {
 		font-size: 38px;
+	}
+
+	header .social-media {
+		display: none;
 	}
 }
